--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
 plugins {
-alias(libs.plugins.android.application) apply false
+    // ✅ DO NOT use alias() here — only direct plugin IDs
+    id 'com.android.application' version '8.13.0' apply false
 
-    // Add the dependency for the Google services Gradle plugin
+    // ✅ Google Services plugin for Firebase
     id 'com.google.gms.google-services' version '4.4.3' apply false
+}
 
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
