--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.FinalCaseStudy"
         tools:replace="android:allowBackup">
         <activity
+            android:name=".ItemLostFrame"
+            android:exported="false" />
+        <activity
             android:name=".FoundDetailsActivity"
             android:exported="false" />
         <activity
